copy tweaks & scrollbar fix

--- a/app/styles/app.less
+++ b/app/styles/app.less
@@ -21,18 +21,27 @@ body {
   background: @grayLightest;
 }
 
-// .navbar.special-feature .brand {
-//   width: 192px;
-//   background-position: left center;
-// }
+// NAVBAR 
 
-body.embedded .navbar {
-  display: none;
+.navbar.special-feature .brand {
+  width: 192px;
+  background-position: left center;
+  background-size: auto;
+}
+
+// Small tablet
+@media only screen and (max-width: 750px) {
+  .navbar.special-feature .special-feature-misc { display: none; }
+}
+
+body.embedded {
+  .read-more { display: none; }
+  .navbar { display: none; }
 }
 
 #main {
   width: @tgmStoryWidth;
-  max-width: 1000px;
+  max-width: 1100px;
   min-width: 500px;
   font-family: @sansFontFamily;
   font-size: @baseFontSize; 
@@ -55,6 +64,17 @@ body.embedded .navbar {
   color: @grayLight;
   margin: 0;
 }
+
+.read-more a {
+  text-decoration: none;
+  color: #333;
+  em {
+  color: @black;
+    text-decoration: underline;
+    font-weight: bold;
+  };
+}
+
 
 .selected-info {
   .clearfix();
@@ -152,6 +172,14 @@ body.embedded .navbar {
   max-height: @columnHeight;
   overflow-x: hidden !important;
   overflow-y: scroll !important;
+}
+
+.company-list {
+  padding-right: 20px;  
+}
+
+.list-wrapper {
+  overflow: hidden;
 }
 
 .country-list {
@@ -272,10 +300,9 @@ body.embedded .navbar {
 
 .company-number {
   float: none;
-  margin-left: 5px;
   opacity: 0.5;
   &:before {
-    content: '(';
+    content: ' (';
   };
   &:after {
     content: ')';
@@ -286,15 +313,18 @@ body.embedded .navbar {
 
 .country-list {
   z-index: 1;
+  // scrollbar-hiding madness pt 1:
+  width: 200%;
 }
 
 .country-container {
   margin-bottom: 0.4em;
   background: @grayLighter;
-  .border-radius(2px);
+  .border-radius(3px);
   padding: .25em 0 .3em 0;
-  width: 100%;
   z-index: 3;
+  // scrollbar-hiding madness pt 2:
+  width: 50.25%;
 }
 
 .country {
@@ -317,7 +347,7 @@ body.embedded .navbar {
 .country-number {
   position: absolute;
   top: 3px;
-  right: 3%;
+  right: 1.5%;
   z-index: 5;
   opacity: 0.6;
 }
@@ -361,19 +391,17 @@ body.embedded .navbar {
   }
 }
 
-
-
 .tgm-watermark {
   width: auto;
   float: right;
-  color: @gray;
+  color: #333;
   text-decoration: none;
   line-height: @baseLineHeight * .75;
   padding: (@baseLineHeight * .75) / 2 0;
   padding-left: 38px;
   background: url(/images/tgm-logo-30px.png) left center no-repeat;
   text-align: right;
-  font-weight: 600;
+  font-weight: normal;
   &:hover {
     color: @black;
     text-decoration: underline;
